# gdrivefs

./: .gitignore  .google_drive_tokens.enc  .travis.yml  README.md  example_w_xarray_zarr.ipynb  gdrivefs.py  pyproject.toml  requirements.txt  scratch.ipynb  scratch1.ipynb  setup.cfg  setup.py
.github/workflows/: tests.yaml
binder/: requirements.txt
gdrive_fs/: __init__.py  core.py
gdrive_fs/tests/: test_core.py
gdrive_fsspec/: core.py
gdrivefs/: __init__.py  _version.py  core.py
gdrivefs/tests/: test_core.py
