[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gdrivefs"
dynamic = ["version"]
description = "File system on GDrive"
readme = "README.md"
license = { text = "BSD" }
maintainers = [{ name = "Martin Durant", email = "mdurant@anaconda.com"}]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fsspec",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "pydata_google_auth",
]

[project.urls]
Source = "http://github.com/fsspec/gdrivefs"

[tool.setuptools]
packages = ["gdrivefs", "gdrivefs.tests"]

[tool.setuptools_scm]
version_file = "gdrivefs/_version.py"
