[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gdrivefs"
dynamic = ["version"]
description = "File system on GDrive"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = { file = "LICENSE" }
maintainers = [
    {name = "Martin Durant", email = "martin.durant@alumni.utoronto.ca"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fsspec",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "pydata_google_auth"
]

[project.urls]
Homepage = "http://github.com/fsspec/gdrivefs"
Repository = "http://github.com/fsspec/gdrivefs"
